src/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: "Handlee";
    src: url("assets/Handlee-Regular.ttf") format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Exo";
    src: url("assets/Exo2-Regular.ttf") format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: "Exo";
    src: url("assets/Exo2-Bold.ttf") format('truetype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: "Exo";
    src: url("assets/Exo2-BoldItalic.ttf") format('truetype');
    font-weight: bold;
    font-style: italic;
}

.wrapper {
    width: 100%;
    height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: 'Exo', sans-serif;
    background-color: #fafafa;
    color: #19191a;
}

.header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-left: 1rem;
}

.header__title {
    font-weight: bold;
    font-style: italic;
    font-size: 3rem;
}

.header__logo {
    height: 100px;
}

.main {
    display: flex;
    gap: 1rem;
}

li{
    z-index: 1;
}
.list__section {
    border: 1px solid #ededed;
    border-radius: 6px;
    margin-left: 1rem;
    width: 250px;
}

.list__content {
    display: flex;
    flex-direction: column;
    min-height: 200px;
}

.list {
    display: flex;
    align-items: center;
    gap: .4rem;
    padding: .5rem;
    margin: .5rem 0;
}

.list__name {
    flex: 1;
    cursor: pointer;
    font-size: 1rem;
}

.list__active {
    font-weight: 700;
    text-decoration: underline;
}

.list__input {
    display: flex;
    align-items: center;
    margin-top: .5rem;
    border-top: 1px solid #ededed;
}

.new__list {
    outline: none;
    border: none;
    background-color: transparent;
    flex: 1;
    border-bottom: 2px solid #7C05F2;
    margin: .5rem;
    transition: border-bottom 250ms ease-in;
    padding: .2rem;
}

.new__list:focus {
    border-bottom-width: 3px;
    border-color: #EE05F2;
}

.new__list:focus::placeholder {
    opacity: .2;
}

.list__title,
.task__title {
    background-image: linear-gradient(to right top, #7C05F2, #EE05F2);
    padding: .5rem;
    text-align: center;
    font-size: 1.5rem;
    letter-spacing: 1px;
    font-weight: bold;
    color: #fafafa;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    
}

.task__section {
    flex: 1;
    border: 1px solid #ededed;
    border-radius: 6px;
    margin-right: 1rem;
}

.task__content {
    display: flex;
    flex-direction: column;
    min-height: 200px;
}

.priority {
    width: 18px;
    height: 18px;
    border: 1px solid #ededed;
    border-radius: 50%;
    cursor: pointer;
}

.low__clr {
    background-color: #86efac;
}

.high__clr {
    background-color: #fb7185;
}

.task {
    display: flex;
    align-items: center;
    gap: .8rem;
    padding: .5rem;
    margin: .5rem 0;
}

.task__input {
    display: flex;
    align-items: center;
    margin-top: .5rem;
    border-top: 1px solid #ededed;
}

.new__task {
    outline: none;
    border: none;
    background-color: transparent;
    flex: 1;
    border-bottom: 2px solid #7C05F2;
    margin: .5rem;
    transition: border-bottom 250ms ease-in;
    padding: .2rem
}

.new__task:focus {
    border-bottom-width: 3px;
    border-color: #EE05F2;
}

.new__task:focus::placeholder {
    opacity: .2;
}

input[type="checkbox"]{
    transform: scale(1);
    transition: transform 250ms ease-in-out;
}

label{
    flex: 1;
    cursor: pointer;
    font-size: 1rem;
}

input[type="checkbox"]:hover {
    transform: scale(1.1);
}

input[type="checkbox"]:checked + label {
    opacity: .5;
    text-decoration: line-through;
}

.btn {
    border: none;
    background-color: transparent;
    cursor: pointer;
    color: #19191a;
}

.add__btn {
    border: none;
    background-color: transparent;
    cursor: pointer;
    padding: .3rem;
    border-bottom-right-radius: 6px;
    transform: scale(1);
    transition: transform 250ms ease-in-out;
}

.svg {
    transform: scale(1);
    transition: transform 250ms ease-in-out;
}

.svg:hover {
    transform: scale(1.1);
}

